[project]
name = "ZooxantelaPy"
authors = [{name = "Diogo LOC", email = "locdiogo@gmail.com"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx~=4.5.0",
    "myst_parser",
    "furo",
    "nbsphinx"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]